--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<h1>Time, Space, Complexity</h1>
 	<p>Time complexity, efficient</p>
 	<p>Space Complexity, O(n)</p>
-	<p><strong>Space Complexity</strong></p>
+	<p><b>Space Complexity</b></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
